# csv-stream-diff

./: .gitignore  MANIFEST.in  README.md  demo_csv_stream_diff.ipynb  pyproject.toml
generated-smoke/: config.generated.yaml  expected.json  left.csv  right.csv
generated-smoke/output/: generated_differences.csv  generated_duplicate_keys.csv  generated_only_in_left.csv  generated_only_in_right.csv  generated_summary.json  generated_summary.txt
generator/: generate_fixtures.py
src/csvstreamdiff/: __init__.py  cli.py  comparer.py  hashing.py  multiprocessing.py  streaming.py
tests/: test_comparer.py  test_hashing.py  test_streaming.py
tests/features/: csv_diff.feature  environment.py
tests/features/steps/: csv_diff_steps.py
